- Updated stats page to use the new StatsTable component
- Added chain switching functionality
- Added additional columns: Supply, T-Shares, Principal
- Improved table styling and responsiveness
- Added loading states with skeletons for better UX
- Added Dexscreener links for tokens with valid pair addresses 

[2024-03-21] MAXI Sphere Updates
- Restructured maxi.tsx to match deci.tsx implementation
- Set spiralPoints to 5555 to match MAXI stake length
- Updated color scheme to MAXI blue (#3991ED)
- Added performance optimizations for color calculations
- Improved camera controls and animation settings
- Added collapsible stats panel with yield information
- Implemented proper cleanup and error handling
- Added entrance screen with MAXI logo
- Optimized animation frame handling for smoother performance 

2024-03-27
- Removed NEXT_PUBLIC_ prefix from WHITELISTED_EMAILS environment variable in whitelisted-handles.ts
- Created new API endpoint at /api/whitelist/check for checking whitelist status
- Created useWhitelist hook for client-side whitelist checking 

## [2024-03-26]
### Changed
- Updated middleware.ts to use direct API call for whitelist checking instead of isEmailWhitelisted function
- Installed next-auth package for JWT handling
- Improved error handling in middleware to redirect to home page on errors
- Added proper session handling with next-auth/jwt
- Maintained protected pages configuration for consistent access control 

[2024-04-26] Added eHEX Transactions Page
- Created new page at pages/ehex-transactions.tsx
- Created new components in components/ehex-transactions/
  - Filters.tsx - Date range filter component
  - Chart.tsx - Transaction volume chart component
  - Table.tsx - Transaction table component
  - WalletNetwork.tsx - Network visualization component
  - index.ts - Component exports
- Set up basic structure for tracking eHEX transactions for address 0x705C053d69eB3B8aCc7C404690bD297700cCf169 